support configmaps/secrets for helm chart values
fixes #1903
fixes #1786
