# assets/swagger.json
@@ -2231,6 +2231,24 @@
         }
       }
     },
+    "v1ConfigMapKeySelector": {
+      "description": "Selects a key from a ConfigMap.",
+      "type": "object",
+      "properties": {
+        "key": {
+          "description": "The key to select.",
+          "type": "string"
+        },
+        "localObjectReference": {
+          "$ref": "#/definitions/v1LocalObjectReference"
+        },
+        "optional": {
+          "type": "boolean",
+          "format": "boolean",
+          "title": "Specify whether the ConfigMap or it's key must be defined\n+optional"
+        }
+      }
+    },
     "v1Event": {
       "description": "Event is a report of an event somewhere in the cluster.",
       "type": "object",
@@ -2419,6 +2437,16 @@
         "ip": {
           "type": "string",
           "title": "IP is set for load-balancer ingress points that are IP based\n(typically GCE or OpenStack load-balancers)\n+optional"
+        }
+      }
+    },
+    "v1LocalObjectReference": {
+      "description": "LocalObjectReference contains enough information to let you locate the\nreferenced object inside the same namespace.",
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "title": "Name of the referent.\nMore info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names\nTODO: Add other useful fields. apiVersion, kind, uid?\n+optional"
         }
       }
     },
@@ -2613,6 +2641,24 @@
         "uid": {
           "type": "string",
           "title": "UID of the referent.\nMore info: http://kubernetes.io/docs/user-guide/identifiers#uids"
+        }
+      }
+    },
+    "v1SecretKeySelector": {
+      "description": "SecretKeySelector selects a key of a Secret.",
+      "type": "object",
+      "properties": {
+        "key": {
+          "description": "The key of the secret to select from.  Must be a valid secret key.",
+          "type": "string"
+        },
+        "localObjectReference": {
+          "$ref": "#/definitions/v1LocalObjectReference"
+        },
+        "optional": {
+          "type": "boolean",
+          "format": "boolean",
+          "title": "Specify whether the Secret or it's key must be defined\n+optional"
         }
       }
     },
@@ -2940,6 +2986,13 @@
         "values": {
           "type": "string",
           "title": "Values is Helm values, typically defined as a block"
+        },
+        "valuesFrom": {
+          "type": "array",
+          "title": "ValuesFrom are other sources such as configmaps and secrets to source values from",
+          "items": {
+            "$ref": "#/definitions/v1alpha1ValuesFromSource"
+          }
         }
       }
     },
@@ -4103,6 +4156,18 @@
         "serverName": {
           "description": "ServerName is passed to the server for SNI and is used in the client to check server\ncertificates against. If ServerName is empty, the hostname used to contact the\nserver is used.",
           "type": "string"
+        }
+      }
+    },
+    "v1alpha1ValuesFromSource": {
+      "description": "ValuesFromSource represents a source of values.\nOnly one of its fields may be set.",
+      "type": "object",
+      "properties": {
+        "configMapKeyRef": {
+          "$ref": "#/definitions/v1ConfigMapKeySelector"
+        },
+        "secretKeyRef": {
+          "$ref": "#/definitions/v1SecretKeySelector"
         }
       }
     },
